# couimet.github.io

./: .gitignore  .markdownlint-cli2.jsonc  .pre-commit-config.yaml  404.html  CLAUDE.md  Gemfile  Makefile  README.md  _config.yml  _config_ghpages.yml  index.html  pyproject.toml  resume-full.html  resume.html  resume.json  resume.yml  robots.txt
.snapshots/: sitemap.xml
_data/: articles.json  articles.yml  bio.json
_includes/: copy-link.html  footer.html  header.html
_layouts/: default.html  follow-along.html  home.html  missingpage.html  project.html
articles/: index.html
css/: changelog.css
follow-alongs/: fun-pump.md  index.html  millow.md  my-claude-skills-issues-10.md
projects/: cotton.md  couimet-github-io.md  micromouse.md  millow-2025-02.md  my-claude-skills.md  rangelink-extension.md  vacay.md
scripts/: _banner_settings.py  _banner_utils.py  extract-resume-text.py  generate-social-banner-rangelink.py  generate-social-banner.py  lint-resume-docx.py  normalize-sitemap.py  resume_utils.py  (+3 more)
scripts/ghpages-redirect/: pyproject.toml  verify_redirects.py
scripts/ghpages-redirect/tests/: test_verify_redirects.py
scripts/ghpages-redirect/tests/fixtures/: index.html  resume.html
scripts/ghpages-redirect/tests/fixtures/projects/: index.html  rangelink-extension.html
scripts/social-banner/: README.md  generate.py  generate_rangelink.py  pyproject.toml  settings.py  utils.py
scripts/social-banner/tests/: conftest.py  test_generate.py  test_generate_rangelink.py  test_utils.py
scripts/social-banner/tests/fixtures/: bio.json  rangelink.md
(+35 files in other folders)
