[project]
name = "couimet-ghpages-redirect"
version = "0.1.0"
description = "Verifier for the couimet.github.io per-path redirect stubs"
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["verify_redirects"]

[tool.pytest.ini_options]
pythonpath = [".", "tests"]
testpaths = ["tests"]
